force-app/main/default/objects/Zuora__CreditMemo__c/Zuora__CreditMemo__c.object-meta.xml
<CustomObject>
    <description>Credit memos that you issued to your customers to reduce invoice and account balances.</description>
    <label>Credit Memo</label>
    <nameField>
        
        <label>Credit Memo Number</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>