force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__AppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AppliedAmount__c</fullName>
    <description>Only visible for credit memos. The amount of the credit memo that is applied.</description>
    <inlineHelpText>Only visible for credit memos. The amount of the credit memo that is applied.</inlineHelpText>
    <label>Applied Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>