force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__Balance__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Balance__c</fullName>
    <description>Only visible for debit memos. The total amount that your customer owes to you for this memo.</description>
    <label>Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>