force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingAccount__c</fullName>
    <description>Zuora Billing Account object. An account is a customer account that collects all of the critical information about the customer, such as contact information, payment terms, and payment methods. You can use a customer account to track subscriptions, amendments, and transactions, such as invoices and payments.</description>
    <inlineHelpText>Zuora Billing Account object.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>