force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__Comments__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Comments__c</fullName>
    <description>The note of the memo.</description>
    <inlineHelpText>The note of the memo.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>