force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__CurrencyFX__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CurrencyFX__c</fullName>
    <description>Exchange Rate Date: Only available if you have the currency conversion feature enabled.</description>
    <label>ExchangeRateDate</label>
    <type>Date</type>
</CustomField>