force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__Invoice__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Zuora__ZInvoice__c</referenceTo>
    <relationshipLabel>Credit Memo</relationshipLabel>
    <relationshipName>Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>