force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__MemoDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MemoDate__c</fullName>
    <description>The date when this memo is created. If the credit memo is created by bill runs, the memo date is the invoice date.</description>
    <inlineHelpText>The date when this memo is created. If the credit memo is created by bill runs, the memo date is the invoice date.</inlineHelpText>
    <label>Credit Memo Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>