force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__PostedById__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PostedById__c</fullName>
    <label>Posted By ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>