force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__PostedOn__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PostedOn__c</fullName>
    <label>Posted On</label>
    <type>DateTime</type>
</CustomField>