force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ReasonCode__c</fullName>
    <description>The reason why you want to create this memo.</description>
    <inlineHelpText>The reason why you want to create this memo.</inlineHelpText>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>