force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__RefundAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RefundAmount__c</fullName>
    <description>Only visible for credit memos. The amount of the credit memo that refunds to your customer.</description>
    <inlineHelpText>Only visible for credit memos. The amount of the credit memo that refunds to your customer.</inlineHelpText>
    <label>Refund Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>