force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__Source__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Source__c</fullName>
    <label>Source</label>
    <length>32</length>
    <type>Text</type>
</CustomField>