force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__Status__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Status__c</fullName>
    <description>DEFAULT &apos;Draft. COMMENT &apos;Draft, Posted, Canceled,Error, PendingForTax, Generating, CancelInProgress&apos;</description>
    <inlineHelpText>DEFAULT &apos;Draft. COMMENT &apos;Draft, Posted, Canceled,Error, PendingForTax, Generating, CancelInProgress&apos;</inlineHelpText>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>