force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TargetDate__c</fullName>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>