force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TaxAmount__c</fullName>
    <description>The total tax amount of this memo.</description>
    <inlineHelpText>The total tax amount of this memo.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>