force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__TotalAmountWithoutTax__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TotalAmountWithoutTax__c</fullName>
    <description>The total non-tax amount.</description>
    <label>Total Amount Without Tax</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>