force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__TotalTaxExemptAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TotalTaxExemptAmount__c</fullName>
    <label>Total Tax Exempt Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>