force-app/main/default/objects/Zuora__CreditMemo__c/fields/Zuora__TransferredToAccounting__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TransferredToAccounting__c</fullName>
    <description>The status of the mapping from Zuora to a third party, such as NetSuite or Salesforce. You can only edit this field when the memo is posted.

Supported values are:

No
Processing
Yes
Error
Ignore</description>
    <inlineHelpText>The status of the mapping from Zuora to a third party, such as NetSuite or Salesforce. You can only edit this field when the memo is posted.

Supported values are:

No
Processing
Yes
Error
Ignore</inlineHelpText>
    <label>Transferred To Accounting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>